--- a/Exercicios/Ex025/iframelocal.html
+++ b/Exercicios/Ex025/iframelocal.html
@@ -20,6 +20,7 @@
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis cum sapiente possimus. Assumenda possimus pariatur mollitia dolores rerum vel quisquam earum placeat repellat eaque, necessitatibus aspernatur sunt cupiditate? Molestias, molestiae?</p>
 
     <ul>
+        <li><a href="iframelocal.html">inicio</a></li>
         <li><a href="paginas-extras/pag001.html" target="janela">Página 1</a></li>
         <li><a href="paginas-extras/pag002.html" target="janela">Página 2</a></li>
         <li><a href="paginas-extras/pag003.html" target="janela">Página 3</a></li>
@@ -27,8 +28,8 @@
    
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam quidem quam quaerat animi hic numquam? Nulla vero facilis ducimus, vitae molestias voluptatem minima reprehenderit nostrum dolore voluptatum. Deserunt, laudantium consectetur?</p>
 
-     <iframe name="janela" src="" frameborder="0"> <!-- iframe embutido. o name e necessario para chamar a pagina externa dentro do iframe -->
-        <p>Navegador não compativel!</p>
+     <iframe name="janela" srcdoc="<h1>Escolha uma opção</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quae nostrum atque iusto omnis delectus fugit quia aperiam voluptate quidem cupiditate, odio ut officiis, fuga facere, incidunt corporis vitae illum!</p>" frameborder="0"> <!-- iframe embutido. o name e necessario para chamar a pagina externa dentro do iframe -->
+        <p>Navegador não compativel!</p>   
     </iframe>
     
 </body>
