--- a/Exercicios/Ex025/iframelocal.html
+++ b/Exercicios/Ex025/iframelocal.html
@@ -28,7 +28,8 @@
    
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam quidem quam quaerat animi hic numquam? Nulla vero facilis ducimus, vitae molestias voluptatem minima reprehenderit nostrum dolore voluptatum. Deserunt, laudantium consectetur?</p>
 
-     <iframe name="janela" srcdoc="<h1>Escolha uma opção</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quae nostrum atque iusto omnis delectus fugit quia aperiam voluptate quidem cupiditate, odio ut officiis, fuga facere, incidunt corporis vitae illum!</p>" frameborder="0"> <!-- iframe embutido. o name e necessario para chamar a pagina externa dentro do iframe -->
+     <iframe name="janela" srcdoc="<h1>Escolha uma opção</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error quae nostrum atque iusto omnis delectus fugit quia aperiam voluptate quidem cupiditate, odio ut officiis, fuga facere, incidunt corporis vitae illum!</p>" frameborder="0" sandbox="allow-forms"> <!-- iframe embutido. o name e necessario para chamar a pagina externa dentro do iframe -->
+        <!--sandbox bloqueia oq vc determinar no iframe-->
         <p>Navegador não compativel!</p>   
     </iframe>
     
