--- a/Exercicios/Ex028/flex001.html
+++ b/Exercicios/Ex028/flex001.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flex-Box</title>
+    <style>
+        div.container {
+            background-color: blueviolet;
+            
+            display: flex;
+        }
+        div.item {
+            background-color: yellow;
+            border: 1px solid black;
+            text-align: center;
+            flex: auto;
+        }
+    </style>
 </head>
+
 <body>
     <div class="container">
         <div class="item">A</div>
