--- a/Exercicios/Ex030-MenuFlexBox/index.html
+++ b/Exercicios/Ex030-MenuFlexBox/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width= , initial-scale=1.0">
     <title>Menu flexbox</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css" media="screen and (max-width: 570px)">
 </head>
 <body>
     <header>
